# writing-delta-tables

./: README.md  main.py  memray-flamegraph.html  pyproject.toml
src/delta_writer/: datamodel.py  main.py  utils.py  writing.py
