[project]
name = "delta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deltalake>=0.25.5",
    "faker>=37.1.0",
    "memray>=1.17.1",
    "multiprog>=0.1.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "typer>=0.15.2",
]
